[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Audio_menu.gd" type="Script" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://scripts/Video_menu.gd" type="Script" id=3]

[node name="Settings" type="CanvasLayer"]
visible = false
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 599.0
color = Color( 0.0470588, 0.054902, 0.113725, 0.580392 )

[node name="Common_menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Common_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 403.5
margin_top = 182.5
margin_right = 580.5
margin_bottom = 377.5

[node name="Video" type="Button" parent="Common_menu/VBoxContainer"]
margin_right = 177.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Video"

[node name="Audio" type="Button" parent="Common_menu/VBoxContainer"]
margin_top = 99.0
margin_right = 177.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Audio"

[node name="BackFromSettings" type="Button" parent="Common_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 406.0
margin_top = 514.0
margin_right = 578.0
margin_bottom = 560.0
text = "Back"

[node name="Video_menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Video_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -40.0
margin_right = 48.5
margin_bottom = 40.0

[node name="Labels" type="VBoxContainer" parent="Video_menu/HBoxContainer"]
margin_right = 69.0
margin_bottom = 80.0

[node name="FullScreen" type="Label" parent="Video_menu/HBoxContainer/Labels"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
size_flags_vertical = 6
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video_menu/HBoxContainer/Labels"]
margin_top = 33.0
margin_right = 69.0
margin_bottom = 47.0
size_flags_vertical = 6
text = "Borderless"

[node name="VSync" type="Label" parent="Video_menu/HBoxContainer/Labels"]
margin_top = 61.0
margin_right = 69.0
margin_bottom = 75.0
size_flags_vertical = 6
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video_menu/HBoxContainer"]
margin_left = 73.0
margin_right = 97.0
margin_bottom = 80.0

[node name="FullScreen" type="CheckBox" parent="Video_menu/HBoxContainer/Checks"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Borderless" type="CheckBox" parent="Video_menu/HBoxContainer/Checks"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="VSync" type="CheckBox" parent="Video_menu/HBoxContainer/Checks"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="BackFromVideo" type="Button" parent="Video_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.0
margin_top = -46.0
margin_right = 86.0
text = "Back"

[node name="Audio_menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Audio_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -28.0
margin_right = 102.0
margin_bottom = 28.0

[node name="Labels" type="VBoxContainer" parent="Audio_menu/HBoxContainer"]
margin_right = 58.0
margin_bottom = 56.0

[node name="Master" type="Label" parent="Audio_menu/HBoxContainer/Labels"]
margin_top = 1.0
margin_right = 58.0
margin_bottom = 15.0
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="Audio_menu/HBoxContainer/Labels"]
margin_top = 21.0
margin_right = 58.0
margin_bottom = 35.0
size_flags_vertical = 6
text = "Music"

[node name="Sound FX" type="Label" parent="Audio_menu/HBoxContainer/Labels"]
margin_top = 41.0
margin_right = 58.0
margin_bottom = 55.0
size_flags_vertical = 6
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio_menu/HBoxContainer"]
margin_left = 62.0
margin_right = 204.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio_menu/HBoxContainer/Slider"]
margin_right = 142.0
margin_bottom = 16.0
min_value = -45.0
max_value = 0.0

[node name="Music" type="HSlider" parent="Audio_menu/HBoxContainer/Slider"]
margin_top = 20.0
margin_right = 142.0
margin_bottom = 36.0
min_value = -40.0
max_value = 0.0

[node name="SoundFX" type="HSlider" parent="Audio_menu/HBoxContainer/Slider"]
margin_top = 40.0
margin_right = 142.0
margin_bottom = 56.0
min_value = -40.0
max_value = 0.0

[node name="BackFromAudio" type="Button" parent="Audio_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.0
margin_top = -46.0
margin_right = 86.0
text = "Back"

[connection signal="pressed" from="Common_menu/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Common_menu/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Common_menu/BackFromSettings" to="." method="_on_BackFromSettings_pressed"]
[connection signal="toggled" from="Video_menu/HBoxContainer/Checks/FullScreen" to="Video_menu" method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Video_menu/HBoxContainer/Checks/Borderless" to="Video_menu" method="_on_Borderless_toggled"]
[connection signal="toggled" from="Video_menu/HBoxContainer/Checks/VSync" to="Video_menu" method="_on_VSync_toggled"]
[connection signal="pressed" from="Video_menu/BackFromVideo" to="Video_menu" method="_on_BackFromVideo_pressed"]
[connection signal="value_changed" from="Audio_menu/HBoxContainer/Slider/Master" to="Audio_menu" method="_on_Master_value_changed"]
[connection signal="value_changed" from="Audio_menu/HBoxContainer/Slider/Music" to="Audio_menu" method="_on_Music_value_changed"]
[connection signal="value_changed" from="Audio_menu/HBoxContainer/Slider/SoundFX" to="Audio_menu" method="_on_SoundFX_value_changed"]
[connection signal="pressed" from="Audio_menu/BackFromAudio" to="Audio_menu" method="_on_BackFromAudio_pressed"]
